--- a/app/views/drivers/_form.html.haml
+++ b/app/views/drivers/_form.html.haml
@@ -83,7 +83,7 @@
       - if @driver.persisted?
         .panel.panel-primary
           .panel-heading= translate_helper("driver_documents_heading")
-          %table#documents-table.table.table-striped.table-condensed
+          %table#documents-table.table.table-condensed
             %thead
               %tr
                 %th.col-sm-3= translate_helper("document_form_upload_date")
@@ -98,7 +98,7 @@
         / END .panel
         .panel.panel-primary
           .panel-heading= translate_helper("driver_histories_heading")
-          %table#driver_histories-table.table.table-striped.table-condensed
+          %table#driver_histories-table.table.table-condensed
             %thead
               %tr
                 %th.col-sm-3= translate_helper("driver_history_form_event_date")
