--- a/app/views/drivers/_driver_compliances_table.html.haml
+++ b/app/views/drivers/_driver_compliances_table.html.haml
@@ -1,5 +1,5 @@
 - table_id = legal ? 'legal_driver_compliances_table' : 'driver_compliances_table'
-%table.table.table-striped.table-condensed{id: table_id}
+%table.table.table-condensed{id: table_id}
   %thead
     %tr
       %th.col-sm-3= translate_helper("driver_compliance_form_due_date")
