--- a/app/views/documents/_document.html.haml
+++ b/app/views/documents/_document.html.haml
@@ -17,5 +17,5 @@
           remote: true, 
           method: :delete, 
           data: { confirm: translate_helper("document_delete_confirm") }, 
-          class: "btn btn-danger btn-sm pull-right" do
-        %i.fa.fa-remove{'aria-hidden' => true}
+          class: "delete-row-btn" do
+        %i.far.fa-trash-alt{'aria-hidden' => true}
