--- a/app/views/driver_compliances/_driver_compliance.html.haml
+++ b/app/views/driver_compliances/_driver_compliance.html.haml
@@ -16,5 +16,5 @@
           remote: true, 
           method: :delete, 
           data: { confirm: translate_helper("driver_compliance_delete_confirm") }, 
-          class: "btn btn-danger btn-sm pull-right" do
-        %i.fa.fa-remove{'aria-hidden' => true}
+          class: "delete-row-btn" do
+        %i.far.fa-trash-alt{'aria-hidden' => true}
