--- a/app/views/driver_histories/_driver_history.html.haml
+++ b/app/views/driver_histories/_driver_history.html.haml
@@ -13,5 +13,5 @@
           remote: true, 
           method: :delete, 
           data: { confirm: translate_helper("driver_history_delete_confirm") }, 
-          class: "btn btn-danger btn-sm pull-right" do
-        %i.fa.fa-remove{'aria-hidden' => true}
+          class: "delete-row-btn" do
+        %i.far.fa-trash-alt{'aria-hidden' => true}
