--- a/app/views/drivers/edit.html.haml
+++ b/app/views/drivers/edit.html.haml
@@ -1,13 +1,12 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
 #page-header.row
-  .col-sm-12.col-md-6
-    %h1= translate_helper("edit_driver_heading")
-  .col-sm-12.col-md-6
+  %h1.page-title= translate_helper("edit_driver_heading")
+  .action-buttons
     - if can? :manage, @driver
       .pull-right
         %button#driver_form_submit.btn.action-button
           = translate_helper("save")
-        = link_to translate_helper("cancel"), @driver, class: "btn action-button"
+        = link_to translate_helper("cancel"), @driver, class: "btn action-button btn-danger"
 = render partial: "form"
 
 = render partial: "shared/focused_form_panel_javascript"
