--- a/app/views/trips/_trip_result_filter.html.haml
+++ b/app/views/trips/_trip_result_filter.html.haml
@@ -1,5 +1,5 @@
 - trip_result_codes = [[TripResult::SHOW_ALL_ID, 'Show All']] + (TripResult.by_provider(current_provider).order(:name).pluck(:id, :name) + [[TripResult::UNSCHEDULED_ID, 'Pending']]).sort_by{|tr| tr[1]}
-.col-sm-12.trip_result-filter{style: 'padding: 5px;'}
+.col-sm-12.trip_result-filter
   = f.label :trip_result_id, translate_helper(:trip_result)
   = f.collection_check_boxes :trip_result_id, trip_result_codes, :first, :last, { checked: session[trip_result_session_name] }, {class: 'trip-result-filter', style: 'vertical-align: initial;'} do |b|
     .col-sm-12
