--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,12 +1,16 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips'
-.clearfix.row#page-header{style: 'padding: 0px;'}
-  - if can? :create, Trip
-    = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button pull-right'
-  - if can? :create, RepeatingTrip
-    = link_to translate_helper("new_repeating_trip_text"), new_repeating_trip_path, :class=>'btn action-button pull-right'
-  - if can? :index, RepeatingTrip
-    = link_to translate_helper("repeating_trips"), repeating_trips_path, :class=>'btn action-button pull-right'
-  %h1= translate_helper("trips")+ ": " + format_time_as_title_for_listing_day(@start_pickup_date) + " - " + format_time_as_title_for_listing_day(@end_pickup_date)
+.clearfix.row#page-header
+  %h1.page-title
+    = translate_helper("trips")+ ": "
+    %span.date-span
+      = format_time_as_title_for_listing_day(@start_pickup_date) + " - " + format_time_as_title_for_listing_day(@end_pickup_date)
+  .action-buttons
+    - if can? :create, Trip
+      = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button'
+    - if can? :create, RepeatingTrip
+      = link_to translate_helper("new_repeating_trip_text"), new_repeating_trip_path, :class=>'btn action-button'
+    - if can? :index, RepeatingTrip
+      = link_to translate_helper("repeating_trips"), repeating_trips_path, :class=>'btn action-button'
   .clearfix
 
 .col-md-3{style: 'padding: 0px 15px 0px 0px;'}
