--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -474,20 +474,20 @@ form div.actions {
   clear: both;
   margin: 0 0 10px;
 }
-form div.actions input[type="submit"] {
-  padding: 0.5em 0.8em;
-  background: #336699;
-  color: #fff;
-  font-size: 15px;
-  text-decoration: none;
-  border: 0;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-form div.actions input[type="submit"]:hover {
-  background: #264c73;
-}
+// form div.actions input[type="submit"] {
+//   padding: 0.5em 0.8em;
+//   background: #336699;
+//   color: #fff;
+//   font-size: 15px;
+//   text-decoration: none;
+//   border: 0;
+//   -webkit-border-radius: 5px;
+//   -moz-border-radius: 5px;
+//   border-radius: 5px;
+// }
+// form div.actions input[type="submit"]:hover {
+//   background: #264c73;
+// }
 /* tables */
 // table {
 //   width: 100%;
